S: fix img features left align + responsive

--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ li {
     float: left;
 }
 .two-columns figure {
-    width: 280px;
+    width: 480px;
     margin-right: 20px;
     float: left;
 }
@@ -103,13 +103,18 @@ li {
     height: 150px;
     width: unset;
 }
-.img-left figure img, .img-left figure figcaption {
+.img-left figure img {
     margin-left: 0px;
     text-align: left;
 }
+.img-left figure figcaption {
+    margin-left: 0px;
+    text-align: left;
+    padding-left: 6%;
+}
 
 
-/* TYPE */
+/*//////////// TYPE ////////////*/
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -370,6 +375,7 @@ figure {
 figcaption {
     margin-top: 20px;
     text-align: center;
+    font-size: 16px;
 }
 
 article img {
@@ -559,6 +565,9 @@ footer {
     section p + p {
         text-indent: 15%;
     }
+    .img-left figure figcaption {
+        padding-left: 15%;
+    }
     #report-title {
         margin-left: 0px;
         width: 250px;
@@ -577,6 +586,25 @@ footer {
     article {
         margin-left: 0px;
         width: 100%;
+    }
+    .two-columns figure {
+        max-width: 100%;
+        margin-right: 20px;
+        float: left;
+    }
+    .size1-1 figure img {
+        width: initial;
+        max-width: 100%;
+    }
+    .height100 figure img {
+        height: initial;
+        width: unset;
+        max-width: 100%;
+    }
+    .height150 figure img {
+        height: initial;
+        width: unset;
+        max-width: 100%;
     }
 }
 
